// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-navbar> Component <bolt-navbar> centered with 4 short links 1`] = `
<bolt-navbar class="t-bolt-xdark"
             center
             width="auto"
>
  <nav class="c-bolt-navbar c-bolt-navbar--auto  c-bolt-navbar--center c-bolt-navbar--small">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="/"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt
          <span class="u-bolt-hidden u-bolt-inline@xlarge">
            Design System
          </span>
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> variable width 1`] = `
<div class="o-bolt-grid o-bolt-grid--center">
  <div class="o-bolt-grid__cell u-bolt-width-2/3 u-bolt-width-1/2@small">
    <bolt-navbar class="t-bolt-dark"
                 center
                 width="auto"
    >
      <nav class="c-bolt-navbar c-bolt-navbar--auto  c-bolt-navbar--center c-bolt-navbar--small">
        <bolt-nav-priority more-text="More">
          <nav class="c-bolt-nav-priority">
            <bolt-nav-indicator>
              <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a href="/pattern-lab/index.html"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Components
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a href="/docs/getting-started/index.html"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Docs
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a target="_blank"
                       href="https://github.com/bolt-design-system/bolt/releases"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Releases
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a target="_blank"
                       href="https://github.com/bolt-design-system/bolt"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Github
                      </span>
                      <span class="__icon">
                        <bolt-icon slot="after"
                                   name="github"
                        >
                        </bolt-icon>
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
              </ul>
            </bolt-nav-indicator>
          </nav>
        </bolt-nav-priority>
      </nav>
    </bolt-navbar>
  </div>
</div>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 4 short links 1`] = `
<bolt-navbar class="t-bolt-xdark"
             width="auto"
>
  <nav class="c-bolt-navbar c-bolt-navbar--auto ">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="/"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt
          <span class="u-bolt-hidden u-bolt-inline@xlarge">
            Design System
          </span>
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 6 lengthy links 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title--static">
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
          >
          </bolt-icon>
        </div>
        <h2 class="c-bolt-navbar__title-text">
          Navbar with links
        </h2>
      </div>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Real-Time AI
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    End-to-end Automation
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Journey-centric Delivery
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Low Code
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Multi-dimensional Power
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Cloud Choice
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with a linked title 1`] = `
<bolt-navbar class="t-bolt-light"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="https://www.boltdesignsystem.com"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt Design System
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Real-Time AI
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    End-to-end Automation
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Journey-centric Delivery
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Low Code
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Multi-dimensional Power
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Cloud Choice
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without a title 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without links 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title--static">
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
          >
          </bolt-icon>
        </div>
        <h2 class="c-bolt-navbar__title-text">
          Navbar without links
        </h2>
      </div>
    </div>
  </nav>
</bolt-navbar>
`;
